updated readme with nonsense

--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 really simple jquery validation plugin. set it on an element, and you get a true (is valid) or false (is not valid) back.
 
-more to come later, bitches.
+snoop dogg's favorite validation plug-in.
