--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 really simple jquery validation plugin. set it on an element, and you get a true (is valid) or false (is not valid) back.
 
-proper readme coming soon. for now, take a peed at test/test.js :)
+proper readme coming soon. for now, take a peek at test/test.js :)
 
 snoop dogg's favorite validation plug-in.
